# spkm

./: .gitignore
build_env/: create.sh  prepare.sh  version-check.sh
build_env/build_scripts/: base.sh  bash.sh  binutils-pass-1.sh  binutils-pass-2.sh  build-chroot.sh  chr-autoconf.sh  chr-bison.sh  chr-curl.sh  chr-gettext.sh  chr-libstdcpp-pass-2.sh  chr-libyaml.sh  chr-perl.sh  chr-python.sh  chr-sqlite.sh  chr-util-linux.sh  coreutils.sh  diffutils.sh  enter-chroot.sh  file.sh  findutils.sh  finish-chroot.sh  gawk.sh  gcc-pass-1.sh  gcc-pass-2.sh  glibc.sh  grep.sh  gzip.sh  inc-end.sh  inc-start.sh  libstdcpp-pass-1.sh  linux-headers.sh  m4.sh  make.sh  mount-virt.sh  ncurses.sh  patch.sh  sed.sh  tar.sh  umount-virt.sh  xz.sh
src/shared/: CMakeLists.txt
src/spkc/: CMakeLists.txt
src/spkm/: CMakeLists.txt
